opt: optimize RoleBasedAnnotationFilter and related config